test/files/neg/macro-override-macro-overrides-abstract-method-b.check
Impls_Macros_1.scala:12: error: overriding method foo in trait Foo of type (x: Int)Int;
 macro method foo cannot override an abstract method
  def foo(x: Int) = macro Impls.impl
      ^
one error found
